--- a/CommandInterpreterQt.vcxproj.filters
+++ b/CommandInterpreterQt.vcxproj.filters
@@ -46,12 +46,24 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Data.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Coordinates.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MeasureMachine.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="Report.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Data.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="Coordinates.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
